# CGsmiles

./: .gitignore  .readthedocs.yml  README.md  README.rst  pyproject.toml  requirements-docs.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  python-app.yml
cgsmiles/: __init__.py  bigsmiles.py  cgsmiles_utils.py  cheminfo.py  coordinates.py  dialects.py  drawing.py  drawing_utils.py  extractor.py  fingerprint.py  graph_layout.py  graph_layout_utils.py  graph_utils.py  linalg_functions.py  mapfile.py  martini_fp.py  martini_fp_base.py  pysmiles_utils.py  rdkit.py  read_cgsmiles.py  read_fragments.py  resolve.py  sample.py  test_utils.py  write_cgsmiles.py
cgsmiles/tests/: test_big_smile_mol_proc.py  test_big_smile_parsing.py  test_bigsmiles.py  test_cgsmile_parsing.py  test_coordinates.py  test_extractor.py  test_graph_utils.py  test_layering.py  test_molecule_resolve.py  test_rdkit.py  test_read_bigsmiles.py  test_sampler.py  test_utils.py  test_write_cgsmiles.py
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/api/: cgsmiles.cgsmiles_utils.rst  cgsmiles.dialects.rst  cgsmiles.drawing.rst  cgsmiles.drawing_utils.rst  cgsmiles.graph_layout.rst  cgsmiles.graph_layout_utils.rst  cgsmiles.graph_utils.rst  cgsmiles.linalg_functions.rst  cgsmiles.pysmiles_utils.rst  cgsmiles.read_cgsmiles.rst  cgsmiles.rst  cgsmiles.sample.rst  cgsmiles.write_cgsmiles.rst  modules.rst  overview.rst
docs/source/gettingstarted/: api_examples.rst  installation.rst  syntax_examples.rst
docs/source/gettingstarted/tutorials/: drawing.rst  index.rst  mapping.rst  martini.rst  polymers.rst  resolving.rst
docs/source/md/: martini.rst  polyply.rst
docs/source/ml/: fingerprints.rst  gnn.rst
docs/source/syntax/: basic_graph_description.rst  chirality.rst  fragments.rst  introduction.rst  multiple_resolutions.rst  representing_resolutions.rst
