[project]
name = "cgsmiles"
version = "0.0.1"
description = ""
authors = [
    {name = "Fabian Gruenewald"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"setuptools (>= 46.4.0)",
"numpy (>=2.0,<=2.0.2) ; python_version >= '3.9' and python_version < '3.10'",
"numpy (>=2.0.2) ; python_version >= '3.10'",
"networkx (>2.0,<=3.2.1) ; python_version >= '3.9' and python_version < '3.10'",
"networkx (>=3.3); python_version >= '3.10'",
"pysmiles @ git+https://github.com/pckroon/pysmiles.git@master"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["cgsmiles/tests"]
python_files = "test_*.py"

[tool.coverage.run]
branch = true
omit = ["cgsmiles/tests/*"]
source_pkgs = ["cgsmiles"]
