[wheel]
universal = 1

[metadata]
name = cgsmiles
author = Fabian Grunewald
author_email = fgrunewald.science@gmail.com
description_file = README.rst
description-content-type = text/markdown; charset=UTF-8
url = https://github.com/gruenewald-lab/CGsmiles
license = undefined
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = smiles bigsmiles coarse-grained graphs line notation

[options]
packages = find:
setup-requires =
    setuptools >= 46.4.0
    pbr
install-requires =  # ?? requires-dist?
    pbr
    numpy
    networkx >= 2.0
    pysmiles
zip-safe = False


#[build_sphinx]
#source-dir = doc/source
#build-dir = doc/build
#warning-is-error = True
#builder = html
